Update logos with user uploaded files

--- a/index.html
+++ b/index.html
@@ -181,8 +181,14 @@
                     <div class="timeline-item">
                         <div class="timeline-date">Oct 2023 – Current</div>
                         <div class="timeline-content">
-                            <h3>MECM Administrator</h3>
-                            <h4>HCL Technologies Ltd – Lucknow, India</h4>
+                            <div class="company-header">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/HCL_Technologies_logo.svg"
+                                    alt="HCL Technologies" class="company-logo">
+                                <div>
+                                    <h3>MECM Administrator</h3>
+                                    <h4>HCL Technologies Ltd – Lucknow, India</h4>
+                                </div>
+                            </div>
                             <p><strong>Key Roles and Responsibilities:</strong></p>
                             <ul
                                 style="list-style-type: disc; margin-left: 20px; color: var(--text-secondary); margin-top: 10px;">
@@ -206,8 +212,14 @@
                     <div class="timeline-item">
                         <div class="timeline-date">Oct 2022 – Oct 2023</div>
                         <div class="timeline-content">
-                            <h3>Training & Internship</h3>
-                            <h4>HCL Training & Staffing Services Pvt. Ltd. – Lucknow, India</h4>
+                            <div class="company-header">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/HCL_Technologies_logo.svg"
+                                    alt="HCL Technologies" class="company-logo">
+                                <div>
+                                    <h3>Training & Internship</h3>
+                                    <h4>HCL Training & Staffing Services Pvt. Ltd. – Lucknow, India</h4>
+                                </div>
+                            </div>
                             <p>1-year training and internship program conducted by HCL Training and Staffing Services.
                             </p>
                             <p style="margin-top: 10px;"><strong>Learnings:</strong> VMware, Azure, RDBMS, Active
@@ -223,10 +235,13 @@
                 <h2 class="section-title">Education</h2>
                 <div class="education-list">
                     <div class="education-item">
-                        <div class="edu-details">
-                            <h3>IIT Guwahati</h3>
-                            <p>Data Science and Artificial Intelligence</p>
-                            <span class="edu-year">Pursuing</span>
+                        <div class="edu-header">
+                            <img src="iitg_logo.png" alt="IIT Guwahati" class="edu-logo">
+                            <div class="edu-details">
+                                <h3>IIT Guwahati</h3>
+                                <p>Data Science and Artificial Intelligence</p>
+                                <span class="edu-year">Pursuing</span>
+                            </div>
                         </div>
                     </div>
                     <div class="education-item">
