--- a/index.html
+++ b/index.html
@@ -161,19 +161,25 @@
                             class="btn btn-secondary" data-hover>View on GitHub</a>
                     </div>
 
-                    <!-- Project 3: Coming Soon -->
-                    <div class="project-card coming-soon-card">
-                        <div class="project-icon"><i class="fas fa-rocket"></i></div>
-                        <h3>More Coming Soon</h3>
-                        <p>Currently exploring AI-powered automation, Azure cloud solutions, and data-driven
-                            projects. Stay tuned for new work leveraging my Microsoft certifications and IIT Guwahati
-                            coursework.</p>
+                    <!-- Project 2: Sentinel-Sync -->
+                    <div class="project-card">
+                        <div class="project-icon"><i class="fas fa-eye"></i></div>
+                        <h3>Sentinel-Sync</h3>
+                        <p>A dual-tier AI architecture for real-time industrial monitoring. Edge-based YOLOv10-Nano
+                            detects objects at 30+ FPS locally, while Gemini 1.5 Pro performs cloud-based visual
+                            reasoning on flagged frames — reducing bandwidth costs by ~90% with a selective trigger
+                            mechanism.</p>
                         <div class="tech-stack">
-                            <span class="tech-tag">Azure AI</span>
-                            <span class="tech-tag">n8n</span>
                             <span class="tech-tag">Python</span>
+                            <span class="tech-tag">YOLOv10</span>
+                            <span class="tech-tag">OpenCV</span>
+                            <span class="tech-tag">TensorRT</span>
+                            <span class="tech-tag">MQTT</span>
+                            <span class="tech-tag">FastAPI</span>
+                            <span class="tech-tag">Gemini API</span>
+                            <span class="tech-tag">Docker</span>
                         </div>
-                        <span class="btn btn-secondary coming-soon-btn">In Progress</span>
+                        <span class="btn btn-secondary" style="opacity:0.8; cursor:default;">🚧 In Progress</span>
                     </div>
                 </div>
             </div>
