Synced portfolio content with resume: new objective and curated experience points

--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
             <div class="container">
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
-                    <p>Motivated MECM Administrator and Data Science student with hands-on experience in IT
-                        infrastructure, Azure Cloud, Citrix, and endpoint management. Skilled at solving complex
-                        technical problems, optimizing system performance, and automating processes to make enterprise
-                        environments more efficient. Solid foundation in Python, SQL, and cloud technologies, aiming to
-                        bridge IT operations with data-driven decision-making.</p>
+                    <p>IT professional with 3+ years in endpoint management and cloud infrastructure, seeking to
+                        transition
+                        into software development and AI/ML engineering. Quick learner with strong Python, data science,
+                        and Azure foundations.</p>
                 </div>
             </div>
         </section>
@@ -202,21 +201,21 @@
                             <p><strong>Key Roles and Responsibilities:</strong></p>
                             <ul
                                 style="list-style-type: disc; margin-left: 20px; color: var(--text-secondary); margin-top: 10px;">
-                                <li>Worked on on-premises-to-cloud migration of SCCM-managed devices to Intune,
-                                    supporting organizational modernization initiatives.</li>
-                                <li>Monitoring system health, performing patch management, and preparing daily SCCM
-                                    client reports.</li>
-                                <li>Managing device compliance, app deployments, and configuration profiles via
-                                    Microsoft Intune.</li>
-                                <li>Enrolling and managing devices through Intune MDM/MAM, ensuring security baselines
-                                    and conditional access enforcement.</li>
-                                <li>Creating and deploying app protection policies, device configuration profiles, and
-                                    Windows update rings through Intune.</li>
-                                <li>Implementing Windows Autopilot for pre-provisioned device deployments.</li>
-                                <li>Administering Citrix Virtual Apps & Desktops environment, including session
-                                    management and troubleshooting.</li>
-                                <li>Developing remediation scripts to resolve patching issues and improve endpoint
-                                    compliance.</li>
+                                <li>Managed end-to-end SCCM patching lifecycle — SUG creation, update downloads, and
+                                    production deployments — while creating daily client health check reports and
+                                    remediation scripts for patch failures.</li>
+                                <li>Implemented Windows Autopilot for pre-provisioned deployment in production; captured
+                                    custom Windows 10 images for product deployment cycles.</li>
+                                <li>Managed device compliance policies, app deployments, and configuration profiles via
+                                    Microsoft Intune (MDM/MAM), enforcing security baselines and conditional access
+                                    across Windows, iOS, and Android.</li>
+                                <li>Created and deployed app protection policies, device configuration profiles, and
+                                    Windows update rings; troubleshot enrollment failures, sync issues, and policy
+                                    conflicts.</li>
+                                <li>Administered Citrix Virtual Apps and Desktops environment — session management,
+                                    infrastructure monitoring, and resolving connectivity and performance issues.</li>
+                                <li>Performed application onboarding and functional testing across DEV, UAT, and
+                                    Production environments with Win32 packaging and DEV ring documentation.</li>
                             </ul>
                         </div>
                     </div>
